# stock

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  compose.yaml  dockerfile.celery  dockerfile.qq  dockerfile.www  makefile  pyproject.toml  requirements.txt  test.db
.github/workflows/: alembic.yaml  black.yaml  dapperdata.yaml  lockfiles.yaml  mypy.yaml  paracelsus.yaml  pypi.yaml  pytest.yaml  ruff.yaml  tomlsort.yaml
ali_backend/: celery.py  www.py
ali_backend/conf/: db.py  settings.py
ali_backend/models/: __init__.py  test_model.py
ali_backend/routes/: __init__.py  db_test.py  ping.py
ali_backend/services/: db.py  jinja.py
ali_backend/templates/: .gitkeep
db/: env.py  session.py
db/versions/: 1a20c870a6d1_add_test_model.py  446ac4cb0b1b_create_initial_tables.py  75283ffc7996_add_test_model.py  f279968ec644_add_test_model.py
docker/www/: prestart.sh
docs/dev/: api.md  cli.md  database.md  settings.md
tests/: conftest.py
